--- a/Gi CP02/css2.css
+++ b/Gi CP02/css2.css
@@ -95,8 +95,8 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     background-color: #07074f;
-    margin-left: 200px;
-    margin-right: 360px;
+    margin-left: 150px;
+    margin-right: 200px;
 }
 #page>navg>ini{
     grid-area: INICIO;
@@ -115,20 +115,20 @@
     width: 370px;
     position: absolute;
     left: 15%;
-    top: 45%;
+    top: 49%;
 }
 #page>corpo>titulo {
     position:absolute;
-    left: 40%;
-    top: 45%;
+    left: 44%;
+    top: 48%;
     font-size: 40px;
     font-weight: bolder;
 }
 
 #page>corpo>txt {
     position:absolute;
-    left: 40%;
-    top: 52%;
+    left: 44%;
+    top: 54%;
     right: 15%;
     font-size: 19px;
     text-align: justify;
@@ -136,7 +136,7 @@
 #page>corpo>txt2 {
     position:absolute;
     left: 15%;
-    top: 95%;
+    top: 100%;
     right: 15%;
     font-size: 19px;
     text-align: justify;
@@ -152,7 +152,7 @@
     color: white;
     background-color:#07074f;
     position: absolute;
-    top:210%;
+    top:220%;
     
 }
 
@@ -239,7 +239,7 @@ a{
    
 @media(max-width:800px)   
 {
-    #page{
+    .body{
         display: flex;
         flex-direction: row;
         background-color: chartreuse;
