--- a/CP02/CSS/style.css
+++ b/CP02/CSS/style.css
@@ -1,3 +1,4 @@
+/* CSS portal do paciente */ 
 /* Estilizando */
 
 .navbar {
@@ -151,3 +152,4 @@ section {
     justify-content: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
